objects/QBO_Subscribe__c.object
<CustomObject>
    <fields>
        <fullName>ActiveStatus__c</fullName>
        <label>ActiveStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDecisionField__c</fullName>
        <label>DateDecisionField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldsToBeQueried__c</fullName>
        <label>FieldsToBeQueried</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GracePeriodUnit__c</fullName>
        <description>Please enter Days/ Months/ Years</description>
        <label>GracePeriodUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GracePeriod__c</fullName>
        <label>GracePeriod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductFamilies__c</fullName>
        <label>ProductFamilies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceCall__c</fullName>
        <label>ServiceCall</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkipDateLogic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkipDateLogic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubscribeType__c</fullName>
        <description>Optin/ Re-Scribe</description>
        <inlineHelpText>Optin/ Re-Scribe</inlineHelpText>
        <label>SubscribeType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>